# agentic-trader

./: .env.example  .gitignore  README.md  pyproject.toml
agentic_trader/agents/: execution_agent.py  regime_agent.py  strategy_governance_agent.py
agentic_trader/agents/rquants/: alpha_discovery_agent.py  compliance_agent.py  data_curator_agent.py  reflection_agent.py  risk_analyst_agent.py  tools.py
agentic_trader/config/: settings.py
agentic_trader/observability/: tracing.py
agentic_trader/orchestrator/: orchestrator.py
agentic_trader/risk/: risk_gateway.py  risk_metrics.py
notebooks/: run_full_pipeline.ipynb
scripts/: analyze_results.py  audit.py  demo_end_to_end.py  generate_figures.py  generate_latex_tables.py  run_ablation.py  run_experiments.py  run_research_cycle.py  train_execution_agent.py
